# ff-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.flow  Dockerfile.prefect  Dockerfile.prod  Procfile  Procfile.prod  README.md  SPEC.md  TODOS.md  alembic.ini  app.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-e2e.txt  start-polling.py
.github/workflows/: ci.yml  linters.yml  production.yml  staging.yml
agents/: .paperclip.yaml  COMPANY.md  README.md
agents/analyst/: AGENTS.md
agents/ceo/: AGENTS.md
agents/comms/: AGENTS.md
agents/cto/: AGENTS.md
agents/qa/: AGENTS.md
agents/release-engineer/: AGENTS.md
agents/staff-engineer/: AGENTS.md
alembic/: env.py
alembic/versions/: 2023-12-27_init.py  2023-12-28_meme.py  2023-12-29_user.py  2023-12-30_meme_raw_telegram_content_optional.py  2023-12-30_user_meme_reaction.py  2024-01-02_raw_vk_memes.py  2024-01-04_meme_source_added_by.py  2024-01-08_meme_stats.py  2024-01-08_user_stats.py  2024-01-28_meme_stats_raw_impr_rank.py  2024-01-28_remove_language_table.py  2024-01-28_remove_language_table_fks.py  2024-02-24_add_inviter_id.py  2024-03-02_popup_logs_meme_source_stats.py  2024-03-07_extension_pg_pg_trgm.py  2024-03-07_inlinesearch.py  2024-03-09_ig_parser.py  2024-03-10_mfirst.py  2024-03-16_user_chat_membership.py  2024-03-31_more_user_stats.py  2024-05-06_meme_raw_upload.py  2024-05-12_meme_stats_default.py  2024-05-12_more_meme_stats.py  2024-05-26_treasury.py  2024-07-08_meme_stats_add_lr_smoothed.py  2024-08-04_index_reaction_id.py  2024-09-30_deep_link_log.py  2024-10-09_add_meme_indexes.py  2024-11-30_big_integers_in.py  2024-11-30_log_message_tg.py  2026-03-15_engagement_score.py  2026-03-18_stats_perf_indexes.py  2026-03-22_chat_agent_tables.py  2026-03-23_telegram_chat_and_wrapped.py
docs/: paperclip-api.md  paperclip-ops-runbook.md
docs/analyst/: README.md  metrics.sql
docs/april-autonomous-ai/: README.md  autoresearch-research.md  gstack-research.md  paperclip-research.md  paperclip-setup.md
docs/comms/: README.md  brand-guide.md  content-plan.md
experiments/: README.md  log.jsonl
flow_deployments/: broadcasts.py  crossposting.py  parsers.py  rewards.py  stats.py  storage.py
requirements/: base.txt  dev.txt  flow.txt  prefect.txt  prod.txt
scripts/: deep_parse.py  deep_parse_new_sources.py  describe_user_memes.py  e2e_smoke.py  eval_ranking.py  generate_session_string.py  pre-commit-secrets-check.sh  serve_flows.py  setup_automations.py
specs/: README.md  data-hypotheses.md  dedup.md  error-profile.md  experiment-2026-03-14.md  experiment-2026-03-16-es-ranked.md  experiment-2026-03-20-adaptive-cold-start.md  issues.md  parsing-etl.md  reaction-flow.md  recommendations.md  testing.md
src/: config.py  constants.py  database.py  localizer.py  main.py  modal.py  models.py  redis.py  utils.py
src/flows/: hooks.py  (+2 more)
tests/: conftest.py  factories.py  test_auto_snooze.py  test_crossposting_meme.py  test_redis.py
(+162 files in other folders)
