[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# Long strings inside triple-quoted string literals can't use inline noqa
"src/tgbot/handlers/chat/agent/prompts.py" = ["E501"]
"src/tgbot/handlers/chat/ai.py" = ["E501"]
"src/tgbot/handlers/chat/explain_meme.py" = ["E501"]
"src/tgbot/handlers/treasury/commands.py" = ["E501"]
"src/stats/user.py" = ["E501"]
"src/tgbot/handlers/moderator/get_meme.py" = ["E501"]
"src/tgbot/handlers/moderator/invite.py" = ["E501"]
"src/tgbot/handlers/stats/wrapped.py" = ["E501"]
"src/flows/crossposting/meme.py" = ["E501"]
"src/flows/rewards/uploaded_memes.py" = ["E501"]

[tool.poetry.dependencies]
